Working but slow
Co-authored-by: Hovstadius <Hovstadius@users.noreply.github.com>
Co-authored-by: Oskar <Okrash0@users.noreply.github.com>

--- a/A1/Makefile
+++ b/A1/Makefile
@@ -12,6 +12,9 @@ all: $(BIN)
 
 stencil: stencil.c stencil.h
 	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
+
+stencil_serial: stencil_serial.c stencil.h
+	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
 	
 clean:
 	$(RM) $(BIN)
