Scatter sub matrices using row wise partitioning

--- a/A2/Makefile
+++ b/A2/Makefile
@@ -6,14 +6,14 @@ CC = mpicc
 CFLAGS = -std=c99 -g -Ofast -Wall 
 LIBS = -lm
 
-BIN = matmul
+BIN = matmul test
 
 all: $(BIN)
 
 matmul: matmul.c 
 	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
 
-
-	
+test:test.c
+	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
 clean:
 	$(RM) $(BIN)
