Found bug occuring on n>16

--- a/A2/Makefile
+++ b/A2/Makefile
@@ -1,19 +1,18 @@
 ###############################################################################
-# Makefile for assignment 1, Parallel and Distributed Computing 2022.
+# Makefile for assignment 2, Parallel and Distributed Computing 2022.
 ###############################################################################
 
 CC = mpicc
 CFLAGS = -std=c99 -g -Ofast -Wall 
 LIBS = -lm -lblas
 
-BIN = matmul test
+BIN = matmul
 
 all: $(BIN)
 
 matmul: matmul.c 
 	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
 
-test:test.c
-	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
+
 clean:
 	$(RM) $(BIN)
