Deleted big files and gave up
Co-authored-by: Oskar <Okrash0@users.noreply.github.com>
Co-authored-by: Hovstadius <Hovstadius@users.noreply.github.com>

--- a/A2/Makefile
+++ b/A2/Makefile
@@ -6,13 +6,15 @@ CC = mpicc
 CFLAGS = -std=c99 -g -Ofast 
 LIBS = -lm -lopenblas
 
-BIN = matmul
+BIN = matmul matmul_backup
 
 all: $(BIN)
 
 matmul: matmul.c 
 	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
 
+matmul_backup: matmul_backup.c 
+	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
 
 clean:
 	$(RM) $(BIN)
