Fixed errors and created reference files+test file

--- a/A2/Makefile
+++ b/A2/Makefile
@@ -6,7 +6,7 @@ CC = mpicc
 CFLAGS = -std=c99 -g -Ofast 
 LIBS = -lm -lopenblas
 
-BIN = matmul matmul_backup
+BIN = matmul matmul_backup testblock
 
 all: $(BIN)
 
@@ -15,6 +15,9 @@ matmul: matmul.c
 
 matmul_backup: matmul_backup.c 
 	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
+
+testblock: testblock.c 
+	$(CC) $(CFLAGS) -o $@ $< $(LIBS)	
 
 clean:
 	$(RM) $(BIN)
